added tooltips for accessibility and changed table css

--- a/src/app/components/output/output.component.html
+++ b/src/app/components/output/output.component.html
@@ -1,7 +1,8 @@
 <body>
     <app-header></app-header>
     <div class="task-bar">
-        <mat-icon class="add" (click)="add()">add_box</mat-icon>
+        <mat-icon class="add" (click)="add()" matTooltip="Add a new container to the dashboard."
+            matTooltipPosition="after">add_box</mat-icon>
     </div>
     <div class="dashboard-container">
         <div class="cdkDropListGroup" cdkDropListGroup>
@@ -10,7 +11,8 @@
                     [cdkDropListData]="{item:item,index:i}" (cdkDropListDropped)="drop($event)">
                     <div #drag class="cdkDrag" cdkDrag>
                         <div class="cdkDragPlaceholder" *cdkDragPlaceholder></div>
-                        <div class="cdkDragHandle" cdkDragHandle>
+                        <div class="cdkDragHandle" cdkDragHandle matTooltip="Click and hold to drag container."
+                            matTooltipPosition="before">
                             <svg width="24px" fill="currentColor" viewBox="0 0 24 24">
                                 <path
                                     d="M10 9h4V6h3l-5-5-5 5h3v3zm-1 1H6V7l-5 5 5 5v-3h3v-4zm14 2l-5-5v3h-3v4h3v3l5-5zm-9 3h-4v3H7l5 5 5-5h-3v-3z">
