implement time period input

--- a/src/app/components/input/input/input.component.html
+++ b/src/app/components/input/input/input.component.html
@@ -116,9 +116,9 @@
         <div class="container-item" *ngIf="baseJson && stream">
             <div class="button" (click)="initSim()">initSim</div>
             <div class="button" (click)="clearBaseJson()">Reset Base Simulation</div>
-            <!-- <div class="button" (click)="addData()">Add Simulation Data</div>
+            <!-- <div class="button" (click)="addData()">Add Simulation Data</div> -->
             <div class="button" (click)="cancelExecution()">Cancel Simulation Execution</div>
-            <div class="button" (click)="getSimStatus()">Check Status</div> -->
+            <!-- <div class="button" (click)="getSimStatus()">Check Status</div> -->
         </div>
     </div>
     <div class="container-item" *ngIf="baseJson && stream">
