changed delete to remove

--- a/src/app/components/output/plot-container/plot-container.component.css
+++ b/src/app/components/output/plot-container/plot-container.component.css
@@ -40,11 +40,11 @@
     width: 100%;
 }
 
-.delete-button {
-    color: red;
+.remove-button {
+    color: var(--main-epa);
 }
 
-.delete-button:hover, .download-button:hover {
+.remove-button:hover, .download-button:hover {
     opacity: 0.5;
 }
 
