--- a/src/app/components/input/input/input.component.html
+++ b/src/app/components/input/input/input.component.html
@@ -5,13 +5,13 @@
         <div class="container-item">
             <div class="centered"><strong>Study Area</strong></div>
             <div class="section-item" *ngIf="!huc">
-                <!-- <div class="form-row" [formGroup]="pPointForm">
+                <div class="form-row" [formGroup]="pPointForm">
                     <div class="vertical-center">
                         <div>Comid <input type="number" class="input-comid" formControlName="pPointComid" /></div>
                     </div>
                     <div class="button" (click)="getPourPoint()" matTooltip="Get Pour Point">Get Pour Point</div>
                 </div>
-                <div class="centered">- or -</div> -->
+                <div class="centered">- or -</div>
                 <div class="centered">
                     <strong>Click map to select </strong>
                     <select>
@@ -72,9 +72,9 @@
                     </div>
                     <div class="form-row">
                         <div class="vertical-center">Time Step size</div>
-                        <div class="form-row">
-                            <div class="button">Hour</div>
-                            <div class="button">Day</div>
+                        <div class="form-row" [formGroup]="tStepForm">
+                            <div>Hour <input type="radio" name="tStep" formControlName="tStep" value="hour"></div>
+                            <div>Day <input type="radio" name="tStep" formCOntrolName="tStep" value="day"></div>
                         </div>
                     </div>
                     <!-- <div class="form-row">
@@ -89,19 +89,19 @@
 
 
         <div class="container-item" *ngIf="stream && baseJson" [formGroup]="svForm">
-            <div class="centered"><strong>State Variables</strong></div>
+            <div class="centered"><strong>Output State Variables</strong></div>
             <div class="form-row">               
                 <div>Total N<input type="checkbox" formControlName="totalN" /></div>
                 <div *ngIf="!svForm.get('totalN').value">
-                    <div>Amonia and Nitrate<input name="nType" type="radio" formControlName="nType" value="amonia_nitrate" /></div>
-                    <div>Nitrogen<input name="nType" type="radio" formControlName="nType" value="nitrogen" /></div>
+                    <div>Amonia and Nitrate<input type="radio" name="nType" formControlName="nType" value="amonia_nitrate" /></div>
+                    <div>Nitrogen<input type="radio" name="nType" formControlName="nType" value="nitrogen" /></div>
                 </div>
             </div>
             <div class="form-row">
                 <div>Total P<input type="checkbox" formControlName="totalP" /></div>
                 <div *ngIf="!svForm.get('totalP').value">
-                    <div>Phosphorus<input name="pType" type="radio" formControlName="pType" value="phosphorus" /></div>
-                    <div>Phosphate<input name="pType" type="radio" formControlName="pType" value="phosphate" /></div>
+                    <div>Phosphorus<input type="radio" name="pType" formControlName="pType" value="phosphorus" /></div>
+                    <div>Phosphate<input type="radio" name="pType" formControlName="pType" value="phosphate" /></div>
                 </div>
             </div>
             <div>Organic Matter</div>
@@ -109,6 +109,7 @@
 
         <div class="container-item" *ngIf="stream && baseJson">
             <div class="centered"><strong>Stream Segments</strong></div>
+            <div>This network has {{ numNetSegments }} segments</div>
             <app-segment-list></app-segment-list>
             <app-comid-select-input></app-comid-select-input>
         </div>
@@ -118,6 +119,10 @@
             <div class="button" (click)="clearBaseJson()">Reset Base Simulation</div>
         </div>
     </div>
+    <div *ngIf="baseJson && stream">
+        <div class="button" *ngIf="!simulationExecuting" (click)="executeSimulation()">Execute Aquatox Simulation</div>
+    </div>
+
     <div class="container-item" *ngIf="simulationExecuting || simStatus == 'FAILED'">
         <div>Simulation Status: {{ simStatus }}</div>
         <div>{{ status_message }}</div>
@@ -125,9 +130,6 @@
     <div *ngIf="simComplete && simStatus !== 'FAILED'">
         <div class="button" (click)="gotoOutput()" [class.ready]="simComplete">Examine Output</div>
         <div class="button" (click)="downloadSimResults()" [class.ready]="simComplete">Download Data</div>
-    </div>
-    <div *ngIf="baseJson && stream">
-        <div class="button" *ngIf="!simulationExecuting" (click)="executeSimulation()">Execute Aquatox Simulation</div>
     </div>
     <div class="button" *ngIf="simulationExecuting">
         <mat-progress-bar mode="indeterminate"></mat-progress-bar>
