--- a/src/styles.css
+++ b/src/styles.css
@@ -123,6 +123,15 @@ body {
     max-height: var(--main-list-short-height);
 }
 
+@keyframes splash {
+    from { opacity: 0.0; } 
+    to { opacity: 1.0 }
+}
+
+.splash {
+    animation: splash 1s ease-in-out infinite alternate;
+}
+
 ::-webkit-scrollbar {
     width: 10px;
 }
