--- a/src/styles.css
+++ b/src/styles.css
@@ -12,29 +12,19 @@
     --row-gap: .19rem;
     --column-gap: .125rem;
 
-    --main-max-panel-height: 70vh;
+    --main-max-panel-height: 75vh;
 
     --main-list-short-height: 100px;
 }
 
-input[type='number'],
-input[type='date'],
-input[type='radio'] {
-    cursor: pointer;
+html {
+    scroll-behavior: smooth;
 }
 
-input[type='number'] {
-    text-align: center;
-}
-
-input[type='number'].input-comid {
-    width: 100px;
-}
-
-input[type=number]::-webkit-inner-spin-button, 
-input[type=number]::-webkit-outer-spin-button { 
-  -webkit-appearance: none; 
-  margin: 0; 
+body { 
+    margin: 0px;
+    height: 100vh;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
 .button {
@@ -57,12 +47,6 @@ input[type=number]::-webkit-outer-spin-button {
             box-shadow: none;
 }
 
-select,
-mat-icon:hover,
-.button {
-    cursor: pointer;
-}
-
 mat-icon:hover,
 .button:hover {
     background-color: var(--main-hover);
@@ -78,12 +62,6 @@ mat-icon:hover,
 
 .ready {
     background-color: var(--main-ready);
-}
-
-body { 
-    margin: 0px;
-    height: 100vh;
-    font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
 .centered {
@@ -136,6 +114,29 @@ body {
 
 .splash {
     animation: splash 1s ease-in-out infinite alternate;
+}
+
+.button,
+mat-icon:hover,
+select,
+input[type='number'],
+input[type='date'],
+input[type='radio'] {
+    cursor: pointer;
+}
+
+input[type='number'] {
+    text-align: center;
+}
+
+input[type='number'].input-comid {
+    width: 100px;
+}
+
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
 }
 
 ::-webkit-scrollbar {
