--- a/src/app/components/output/segment-status-list/segment-status-list.component.html
+++ b/src/app/components/output/segment-status-list/segment-status-list.component.html
@@ -1,4 +1,11 @@
 <div class="section-item">
     Segment Status
-    <div class="button" *ngFor="let segment of segmentList" (click)="gotoData(segment)">{{ segment }}</div>
+    <div class="scroll">
+        <div class="items">
+            <div class="button item" *ngFor="let segment of segmentList" (click)="gotoData(segment)" 
+                [class.in-progress]="segment.in_progress" [class.ready]="segment.completed" [class.fail]="segment.failed">
+                {{ segment.comid }} {{ segment.status }}
+            </div>
+        </div>
+    </div>
 </div>
