--- a/src/styles.css
+++ b/src/styles.css
@@ -7,7 +7,8 @@
     --main-button: rgb(176, 196, 222);
     --main-hover: rgba(146, 146, 146, 0.5);
     --main-active: rgb(250, 146, 146);
-    --main-ready: rgb(0, 200, 0);
+    --main-working: rgb(71, 199, 255);
+    --main-ready: rgb(0, 190, 19);
     --main-fail: rgb(255, 0, 0);
 
     --row-gap: .19rem;
@@ -59,6 +60,10 @@ mat-icon:hover,
 
 .active {
     background-color: var(--main-active);
+}
+
+.progress {
+    background-color: var(--main-working);
 }
 
 .ready {
@@ -128,6 +133,10 @@ input[type='number'],
 input[type='date'],
 input[type='radio'] {
     cursor: pointer;
+}
+
+.comid-tooltip {
+    z-index: 9999;
 }
 
 input[type='number'] {
