--- a/src/app/components/output/output.component.html
+++ b/src/app/components/output/output.component.html
@@ -6,9 +6,9 @@
     </div>
     <div class="dashboard-container">
         <div class="cdkDropListGroup" cdkDropListGroup>
-            <ng-container *ngFor="let item of items; let i=index">
-                <div #cdk class="cdkDropList" cdkDropList cdkDropListOrientation="horizontal"
-                    [cdkDropListData]="{item:item,index:i}" (cdkDropListDropped)="drop($event)">
+            <ng-container *ngFor="let item of dropListData; let i=index">
+                <div #cdk class="cdkDropList" cdkDropList cdkDropListOrientation="horizontal" [cdkDropListData]="item"
+                    (cdkDropListDropped)="drop($event)">
                     <div #drag class="cdkDrag" cdkDrag>
                         <div class="cdkDragPlaceholder" *cdkDragPlaceholder></div>
                         <div class="cdkDragHandle" cdkDragHandle matTooltip="Click and hold to drag container."
@@ -20,7 +20,7 @@
                                 <path d="M0 0h24v24H0z" fill="none"></path>
                             </svg>
                         </div>
-                        <app-plot-container (deleteItem)="delete($event)" [dropListData]="i">
+                        <app-plot-container (deleteItem)="delete($event)" [dropListData]="dropListData[i]">
                         </app-plot-container>
                     </div>
                 </div>
