implement time step option

--- a/src/app/components/input/input/input.component.html
+++ b/src/app/components/input/input/input.component.html
@@ -73,9 +73,9 @@
                         </div>
                         <div class="form-row">
                             <div class="vertical-center">Time Step size</div>
-                            <div class="form-row" [formGroup]="tStepForm">
+                            <div class="form-row">
                                 <div>Hour <input type="radio" name="tStep" formControlName="tStep" value="hour"></div>
-                                <div>Day <input type="radio" name="tStep" formCOntrolName="tStep" value="day"></div>
+                                <div>Day <input type="radio" name="tStep" formControlName="tStep" value="day"></div>
                             </div>
                         </div>
                         <!-- <div class="form-row">
