com-id-select now shows all in-network segments at load

--- a/src/styles.css
+++ b/src/styles.css
@@ -55,7 +55,7 @@ body {
 
 
 .button:hover,
-.segment-status,
+.segment-status:hover ,
 mat-icon:hover {
     background-color: var(--main-hover);
 }
