--- a/src/app/components/input/segment-list/segment-list.component.html
+++ b/src/app/components/input/segment-list/segment-list.component.html
@@ -3,18 +3,21 @@
     <div *ngIf="!boundarySegments.length"><strong>This network has no boundary segments</strong></div>
     <div class="scroll-pane list-short" *ngIf="boundarySegments.length">
         <div class="button" *ngFor="let segment of boundarySegments" [class.active]="isActive(segment)"  (click)="selectSegment(segment)">
-            <div class="form-row">
-                <div class="vertical-center">ComID {{ segment }}</div><mat-icon title="Remove Loadings">delete</mat-icon>
-            </div>
+            <div class="vertical-center">ComID {{ segment }}</div>
         </div>
     </div>
-    <div>Segments with additional Loadings</div>
-    <div *ngIf="!userSegments.length"><strong>This network has no additional loadings</strong></div>
-    <div class="scroll-pane list-short" *ngIf="userSegments.length">
-        <div class="button" *ngFor="let segment of userSegments" [class.active]="isActive(segment)" (click)="selectSegment(segment)">
-            <div class="form-row">
-                <div class="vertical-center">ComID {{ segment }}</div><mat-icon title="Remove Loadings">delete</mat-icon>
-            </div>
+    <!-- <div>Headwater Segments</div>
+    <div *ngIf="!headwaterSegments.length"><strong>This network has no headwater segments</strong></div>
+    <div class="scroll-pane list-short" *ngIf="headwaterSegments.length">
+        <div class="button" *ngFor="let segment of headwaterSegments" [class.active]="isActive(segment)" (click)="selectSegment(segment)">
+            <div class="vertical-center">ComID {{ segment }}</div>
+        </div>
+    </div> -->
+    <div>In-Network Segments</div>
+    <div *ngIf="!inNetworkSegments.length"><strong>This network has no segments</strong></div>
+    <div class="scroll-pane list-short" *ngIf="inNetworkSegments.length">
+        <div class="button" *ngFor="let segment of inNetworkSegments" [class.active]="isActive(segment)" (click)="selectSegment(segment)">
+            <div class="vertical-center">ComID {{ segment }}</div>
         </div>
     </div>
 </div>
