services refactor pt. 3

--- a/src/app/components/input/input/input.component.html
+++ b/src/app/components/input/input/input.component.html
@@ -31,7 +31,7 @@
                     <div *ngIf="catchment">
                         <div class="form-row">
                             <div class="vertical-center">
-                                <div>ComID {{ catchment.id }}</div>
+                                <div>ComID {{ catchment.comid }}</div>
                             </div>
                             <div class="button" (click)="clearCatchment()">Reset Pour Point</div>
                         </div>
