--- a/src/app/components/output/output.component.html
+++ b/src/app/components/output/output.component.html
@@ -4,6 +4,12 @@
         <mat-icon class="add" (click)="add()" matTooltip="Add a new container to the dashboard."
             matTooltipPosition="after">add_box</mat-icon>
     </div>
+    <div class="spinner-container " *ngIf="loading">
+        <div class="spinner-flex">
+            <mat-spinner></mat-spinner>
+            <p>Retrieving data for simID: {{this.cookieService.get("simId")}}</p>
+        </div>
+    </div>
     <div class="dashboard-container">
         <div class="cdkDropListGroup" cdkDropListGroup>
             <ng-container *ngFor="let item of dropListData; let i=index">
